# osm-transit-extractor

./: Cargo.toml  README.md
.github/workflows/: continuous-integration.yml  publish.yml
documentation/: README.md
src/: lib.rs  main.rs
tests/: stops_csv_tests.rs
tests/fixtures/: osm_fixture.osm  osm_fixture.osm.pbf  readme.md
