[package]
name = "osm_transit_extractor"
version = "0.4.0"
authors = ["Pascal Rhod <pascal.rhod@canaltp.fr>", "Noémie Lehuby <noemie.lehuby@canaltp.fr>"]
edition="2018"
license = "AGPL-3.0"
repository = "https://github.com/CanalTP/osm-transit-extractor"
readme = "README.md"
description = "Extract public transport data from an OpenStreetMap file"
keywords = ["osm", "transit"]
categories = ["data-structures", "encoding", "parser-implementations"]

[badges]
travis-ci = { repository = "CanalTP/osm-transit-extractor" }

[dependencies]
csv = "1.0.7"
geo-types = "0.6"
log = "0.4"
osmpbfreader = "0.13"
serde = "1"
serde_derive = "1"
simple_logger = "1"
structopt = "0.3"
tempdir = "0.3"
wkt = "0.8"
